# bigboy

./: .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini
apps/: CMakeLists.txt  bigboy-sdl.cpp  main.cpp
include/bigboy/: APU.h  CPU.h  Cartridge.h  CartridgeHeader.h  Emulator.h  GPU.h  InternalMemory.h  Joypad.h  MMU.h  MemoryDevice.h  OpCode.h  PrefixOpCode.h  Registers.h  Serial.h  Timer.h
include/bigboy/APU/: APU.h
include/bigboy/CPU/: CPU.h  Flags.h  MMU.h  MemoryBus.h  OpCode.h  PrefixOpCode.h  Registers.h
include/bigboy/Cartridge/: Cartridge.h  CartridgeHeader.h
include/bigboy/GPU/: GPU.h  TileSet.h
include/bigboy/MMU/: AddressSpace.h  InternalMemory.h  MMU.h  MemoryDevice.h
lib/: CMakeLists.txt  CPU.cpp  Emulator.cpp  GPU.cpp  Joypad.cpp  Serial.cpp  Timer.cpp
lib/APU/: APU.cpp
lib/CPU/: CPU.cpp  Flags.cpp  MMU.cpp  MemoryBus.cpp  Registers.cpp
lib/Cartridge/: Cartridge.cpp  CartridgeHeader.cpp
lib/GPU/: GPU.cpp
lib/MMU/: InternalMemory.cpp  MMU.cpp
src/: APU.cpp  CMakeLists.txt  CPU.cpp  CPU.h  Cartridge.cpp  CartridgeHeader.cpp  Emulator.cpp  InternalMemory.cpp  Joypad.cpp  MMU.cpp  Registers.cpp  Serial.cpp  Timer.cpp  main.cpp
src/h/: CPU.h
src/imgui/: imgui-SFML.cpp
tests/: CMakeLists.txt
tests/src/: CPUTests.cpp
